generator client {
  provider = "prisma-client"
  output   = "../lib/generated/prisma"
}

datasource db {
  provider = "postgresql"
}

// ─────────────────────────────────────────
// ENUMS
// ─────────────────────────────────────────

enum ExpenseType {
  FIXED
  VARIABLE
}

enum GoalType {
  SAVINGS
  INVESTMENT
}

// ─────────────────────────────────────────
// MODELS
// ─────────────────────────────────────────

model User {
  id           String         @id @default(dbgenerated("gen_random_uuid()")) @db.Uuid
  email        String         @unique
  name         String
  passwordHash String?        @map("password_hash")
  createdAt    DateTime       @default(now()) @map("created_at")
  updatedAt    DateTime       @updatedAt @map("updated_at")

  // Existing relations — with cascade
  budgetMonths BudgetMonth[]
  savingsGoals SavingsGoal[]

  // NextAuth relations
  accounts     Account[]
  sessions     Session[]

  @@map("users")
}

/// Representa el presupuesto de un mes específico para un usuario.
/// La combinación (userId, year, month) es única.
model BudgetMonth {
  id               String             @id @default(dbgenerated("gen_random_uuid()")) @db.Uuid
  userId           String             @map("user_id") @db.Uuid
  year             Int
  month            Int
  createdAt        DateTime           @default(now()) @map("created_at")
  updatedAt        DateTime           @updatedAt @map("updated_at")
  user             User               @relation(fields: [userId], references: [id], onDelete: Cascade)
  incomeEntries    IncomeEntry[]
  expenseEntries   ExpenseEntry[]
  goalMonthSettings GoalMonthSetting[]

  @@unique([userId, year, month], name: "uq_budget_month_per_user")
  @@map("budget_months")
}

/// Fuentes de ingreso dentro de un mes (ej. "Salario EMQU", "Freelance").
model IncomeEntry {
  id            String      @id @default(dbgenerated("gen_random_uuid()")) @db.Uuid
  budgetMonthId String      @map("budget_month_id") @db.Uuid
  name          String
  amount        Decimal     @db.Decimal(10, 2)
  createdAt     DateTime    @default(now()) @map("created_at")
  updatedAt     DateTime    @updatedAt @map("updated_at")
  budgetMonth   BudgetMonth @relation(fields: [budgetMonthId], references: [id], onDelete: Cascade)

  @@map("income_entries")
}

/// Gastos del mes diferenciados por tipo FIXED o VARIABLE.
model ExpenseEntry {
  id            String      @id @default(dbgenerated("gen_random_uuid()")) @db.Uuid
  budgetMonthId String      @map("budget_month_id") @db.Uuid
  name          String
  amount        Decimal     @db.Decimal(10, 2)
  type          ExpenseType
  createdAt     DateTime    @default(now()) @map("created_at")
  updatedAt     DateTime    @updatedAt @map("updated_at")
  budgetMonth   BudgetMonth @relation(fields: [budgetMonthId], references: [id], onDelete: Cascade)

  @@map("expense_entries")
}

/// Meta global de ahorro o inversión del usuario.
/// Un usuario puede tener múltiples metas de cada tipo.
/// totalContributed es un cache desnormalizado que se actualiza
/// cada vez que se modifica un GoalMonthSetting asociado.
model SavingsGoal {
  id                String             @id @default(dbgenerated("gen_random_uuid()")) @db.Uuid
  userId            String             @map("user_id") @db.Uuid
  type              GoalType
  title             String
  goalAmount        Decimal            @map("goal_amount") @db.Decimal(10, 2)
  totalContributed  Decimal            @default(0) @map("total_contributed") @db.Decimal(10, 2)
  createdAt         DateTime           @default(now()) @map("created_at")
  updatedAt         DateTime           @updatedAt @map("updated_at")
  user              User               @relation(fields: [userId], references: [id], onDelete: Cascade)
  goalMonthSettings GoalMonthSetting[]

  @@map("savings_goals")
}

/// Configuración y registro de aportación de una meta para un mes concreto.
/// allocation_pct define el % del ingreso total destinado a la meta.
/// amount_contributed es null mientras el mes está abierto; al cerrarse
/// se fija con el valor real: total_income * (allocation_pct / 100).
model GoalMonthSetting {
  id                String      @id @default(dbgenerated("gen_random_uuid()")) @db.Uuid
  savingsGoalId     String      @map("savings_goal_id") @db.Uuid
  budgetMonthId     String      @map("budget_month_id") @db.Uuid
  allocationPct     Decimal     @map("allocation_pct") @db.Decimal(5, 2)
  amountContributed Decimal?    @map("amount_contributed") @db.Decimal(10, 2)
  createdAt         DateTime    @default(now()) @map("created_at")
  updatedAt         DateTime    @updatedAt @map("updated_at")
  savingsGoal       SavingsGoal @relation(fields: [savingsGoalId], references: [id], onDelete: Cascade)
  budgetMonth       BudgetMonth @relation(fields: [budgetMonthId], references: [id], onDelete: Cascade)

  @@unique([savingsGoalId, budgetMonthId], name: "uq_goal_settings_per_month")
  @@map("goal_month_settings")
}


// ─────────────────────────────────────────
// IDEMPOTENCY
// ─────────────────────────────────────────

/// Stores idempotency keys and their associated responses to prevent
/// duplicate processing of mutating operations.
model IdempotencyRecord {
  id         String   @id @default(dbgenerated("gen_random_uuid()")) @db.Uuid
  key        String   @unique @map("idempotency_key")
  statusCode Int      @map("status_code")
  body       String   @db.Text
  createdAt  DateTime @default(now()) @map("created_at")

  @@map("idempotency_records")
}

// ─────────────────────────────────────────
// NEXTAUTH MODELS
// ─────────────────────────────────────────

model Account {
  id                String  @id @default(dbgenerated("gen_random_uuid()")) @db.Uuid
  userId            String  @map("user_id") @db.Uuid
  type              String
  provider          String
  providerAccountId String  @map("provider_account_id")
  refresh_token     String? @db.Text
  access_token      String? @db.Text
  expires_at        Int?
  token_type        String?
  scope             String?
  id_token          String? @db.Text
  session_state     String?

  user User @relation(fields: [userId], references: [id], onDelete: Cascade)

  @@unique([provider, providerAccountId])
  @@map("accounts")
}

model Session {
  id           String   @id @default(dbgenerated("gen_random_uuid()")) @db.Uuid
  sessionToken String   @unique @map("session_token")
  userId       String   @map("user_id") @db.Uuid
  expires      DateTime

  user User @relation(fields: [userId], references: [id], onDelete: Cascade)

  @@map("sessions")
}

model VerificationToken {
  identifier String
  token      String   @unique
  expires    DateTime

  @@unique([identifier, token])
  @@map("verification_tokens")
}
